--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -40,7 +40,7 @@ email: madison.aitken@mail.utoronto.ca
 contact_links:
   - icon: twitter
     icon_pack: fab
-    name: @m_aitken
+    name: DM me
     link: 'https://twitter.com/m_aitken/'
 
 # Site header
